# server/internal/jellyfin/models.go
@@ -87,37 +87,50 @@ type QueryResult[T any] struct {
 }
 
 type BaseItemDto struct {
-	Id                   string            `json:"Id"`
-	ServerId             string            `json:"ServerId"`
-	Name                 string            `json:"Name"`
-	Etag                 string            `json:"Etag,omitempty"`
-	Path                 string            `json:"Path,omitempty"`
-	DisplayPreferencesId string            `json:"DisplayPreferencesId,omitempty"`
-	LocationType         string            `json:"LocationType,omitempty"`
-	SortName             string            `json:"SortName,omitempty"`
-	Type                 string            `json:"Type"`
-	MediaType            string            `json:"MediaType,omitempty"`
-	IsFolder             bool              `json:"IsFolder"`
-	IsPlayable           bool              `json:"IsPlayable"`
-	CollectionType       string            `json:"CollectionType,omitempty"`
-	ParentId             string            `json:"ParentId,omitempty"`
-	SeriesId             string            `json:"SeriesId,omitempty"`
-	SeasonId             string            `json:"SeasonId,omitempty"`
-	SeriesName           string            `json:"SeriesName,omitempty"`
-	SeasonName           string            `json:"SeasonName,omitempty"`
-	IndexNumber          *int              `json:"IndexNumber,omitempty"`
-	ParentIndexNumber    *int              `json:"ParentIndexNumber,omitempty"`
-	Overview             string            `json:"Overview,omitempty"`
-	PremiereDate         string            `json:"PremiereDate,omitempty"`
-	ProductionYear       *int              `json:"ProductionYear,omitempty"`
-	RunTimeTicks         *int64            `json:"RunTimeTicks,omitempty"`
-	Genres               []string          `json:"Genres"`
-	CommunityRating      *float32          `json:"CommunityRating,omitempty"`
-	ProviderIds          map[string]string `json:"ProviderIds,omitempty"`
-	ImageTags            map[string]string `json:"ImageTags"`
-	BackdropImageTags    []string          `json:"BackdropImageTags"`
-	UserData             *UserItemDataDto  `json:"UserData,omitempty"`
-	MediaSources         []MediaSourceInfo `json:"MediaSources,omitempty"`
+	Id                      string            `json:"Id"`
+	ServerId                string            `json:"ServerId"`
+	Name                    string            `json:"Name"`
+	Etag                    string            `json:"Etag,omitempty"`
+	Path                    string            `json:"Path,omitempty"`
+	DisplayPreferencesId    string            `json:"DisplayPreferencesId,omitempty"`
+	LocationType            string            `json:"LocationType,omitempty"`
+	SortName                string            `json:"SortName,omitempty"`
+	OriginalTitle           string            `json:"OriginalTitle,omitempty"`
+	Type                    string            `json:"Type"`
+	MediaType               string            `json:"MediaType,omitempty"`
+	IsFolder                bool              `json:"IsFolder"`
+	IsPlayable              bool              `json:"IsPlayable"`
+	CollectionType          string            `json:"CollectionType,omitempty"`
+	ParentId                string            `json:"ParentId,omitempty"`
+	SeriesId                string            `json:"SeriesId,omitempty"`
+	SeasonId                string            `json:"SeasonId,omitempty"`
+	SeriesName              string            `json:"SeriesName,omitempty"`
+	SeasonName              string            `json:"SeasonName,omitempty"`
+	IndexNumber             *int              `json:"IndexNumber,omitempty"`
+	ParentIndexNumber       *int              `json:"ParentIndexNumber,omitempty"`
+	Overview                string            `json:"Overview,omitempty"`
+	Taglines                []string          `json:"Taglines,omitempty"`
+	Status                  string            `json:"Status,omitempty"`
+	EndDate                 string            `json:"EndDate,omitempty"`
+	PremiereDate            string            `json:"PremiereDate,omitempty"`
+	ProductionYear          *int              `json:"ProductionYear,omitempty"`
+	RunTimeTicks            *int64            `json:"RunTimeTicks,omitempty"`
+	Genres                  []string          `json:"Genres"`
+	CommunityRating         *float32          `json:"CommunityRating,omitempty"`
+	ProviderIds             map[string]string `json:"ProviderIds,omitempty"`
+	PrimaryImageAspectRatio float64           `json:"PrimaryImageAspectRatio,omitempty"`
+	ImageTags               map[string]string `json:"ImageTags"`
+	BackdropImageTags       []string          `json:"BackdropImageTags"`
+	UserData                *UserItemDataDto  `json:"UserData,omitempty"`
+	MediaSources            []MediaSourceInfo `json:"MediaSources,omitempty"`
+	People                  []BaseItemPerson  `json:"People,omitempty"`
+}
+
+type BaseItemPerson struct {
+	Name            string `json:"Name"`
+	Role            string `json:"Role,omitempty"`
+	Type            string `json:"Type"`
+	PrimaryImageTag string `json:"PrimaryImageTag,omitempty"`
 }
 
 type UserItemDataDto struct {
